Firefox cart scrollbar fix

--- a/src/layout/Cart.module.css
+++ b/src/layout/Cart.module.css
@@ -99,6 +99,7 @@
     overflow-x: hidden;
     height: auto;
     width: 90%;
+    scrollbar-width: none;
 }
 
 .cart__container::-webkit-scrollbar {
